configs, fix salesforce routes
